An attempt to make jenkins pass with the currently installed jdk24-ea. To be reverted later. #14600